objects/Account.object
<CustomObject>
    <fields>
        <fullName>Centre_Type__c</fullName>
        <label>Centre Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-School</fullName>
                </value>
                <value>
                    <fullName>Primary School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>ESL College</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Christian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Student__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denbigh_Family_Code__c</fullName>
        <externalId>true</externalId>
        <label>Denbigh Family Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Code__c</fullName>
        <description>It will be a unique number for each record.</description>
        <displayFormat>FC-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Family Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Former_Student__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Former Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Student__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Future Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_of_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of Family</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Child</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Head of Family</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hosted_Student__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hosted Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Contact</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Going to Sites</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Concerts</fullName>
                </value>
                <value>
                    <fullName>Expos</fullName>
                </value>
                <value>
                    <fullName>Visits</fullName>
                </value>
                <value>
                    <fullName>School Tour</fullName>
                </value>
                <value>
                    <fullName>Quick Enquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Near By</fullName>
                </value>
                <value>
                    <fullName>Accessible</fullName>
                </value>
                <value>
                    <fullName>Far</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_School_Age_Children__c</fullName>
        <description>Number of children in the current year that will go to school next year</description>
        <inlineHelpText>Number of children in the current year that will go to school next year</inlineHelpText>
        <label>No of School Age Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Referrals__c</fullName>
        <description>This will count all the number of childrens</description>
        <formula>Future_Student__c  +  Former_Student__c  +  Hosted_Student__c  +  Current_Student__c  +  Prospect_Student__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overseas__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is he/she an overseas student?</inlineHelpText>
        <label>Overseas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <label>Parish</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Student__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prospect Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anglican</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_region__c</fullName>
        <description>The region where the school or pre school is located, i.e city, inner west, lower north shore etc</description>
        <inlineHelpText>The region where the school or pre school is located, i.e city, inner west, lower north shore etc</inlineHelpText>
        <label>School region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_order_number__c</fullName>
        <description>The visit order number of the school or preschool</description>
        <inlineHelpText>The visit order number of the school or preschool</inlineHelpText>
        <label>Visit order number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Future_Student__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Families</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Stakeholders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Stakeholder</value>
        </filters>
        <label>Stakeholders</label>
    </listViews>
    <recordTypes>
        <fullName>Family</fullName>
        <active>true</active>
        <description>This is a Family record type where the family records will be stored</description>
        <label>Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stakeholder</fullName>
        <active>true</active>
        <description>This is a Stakeholder record type where the stakeholder records will be stored</description>
        <label>Stakeholder</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>